# fast_api_from_scratch

./: .gitignore  README.md  fastapi-practice.db  main.py  pyproject.toml  requirements.txt
auth/: authetication.py  oauth2.py
database/: db_article.py  db_user.py  models.py  schemas.py
router/: article.py  blog_get.py  blog_post.py  file.py  product.py  user.py
